Bug 270560 - Adding contacts with spaces in name fails
Summary: Adding contacts with spaces in name fails
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.89
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 258334 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-04-10 09:40 UTC by
Modified: 2011-04-16 21:44 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description 2011-04-10 09:40:38 UTC
Version:           2.0.89 (using Devel) 
OS:                Linux

When in kmail in a message i right click in a contact that contains spaces in name, that contact appears incorrect in kaddressbook, an exmaple:

Addinf the contact 'Alberto Gomes <alberto@exemplo.com"  will appear in the new generated file ~/.local/share/contacts/lPtLz4seH1.vcf like this:

BEGIN:VCARD
EMAIL:Alberto =
N:;;;;
UID:lPtLz4seH1
VERSION:3.0
END:VCARD

as we can see it doesnt even appears the email address, and in the email field doesnt even appear the email, only the first name appears.

Reproducible: Always




OS: Linux (x86_64) release 2.6.36.2-desktop-2mnb
Compiler: gcc
Comment 1 Antonis Tsiapaliokas 2011-04-12 19:21:50 UTC
Hello

I cannot reproduce this bug on opensuse 11.4. My kde environment is the following

Qt: 4.7.1
KDE Development Platform: 4.6.41 (4.7 >= 20110106)
KMail: 2.0.89

Please could try to reproduce the bug with a newer version of kdepim and check if it is still valid?
Comment 2 2011-04-12 21:52:34 UTC
QT: 4.7.2
Kde from trunk from 2 days ago.
kdepim was last updated from git repo in April 1
Comment 3 Antonis Tsiapaliokas 2011-04-12 23:17:37 UTC
If i have understand right, when you right click into a name from the "To:"/"CC:"/"FROM:" or another field from an email, and this name contain a space then in the kaddressbook, the email address doesn't appear correct. Right? I tried to reproduce this bug and i could not... Please could you give me more details about the reproduce steps?
Comment 4 2011-04-13 02:27:53 UTC
Yes you are correct, the problem isnt about spaces but about characters that contain acents, the example i gaved was wrong, the correct example was:

Alberto Simões <ambs@di.uminho.pt>

and the file created had this:

BEGIN:VCARD
EMAIL:Alberto =
N:;;;;
UID:mcvSerHPwe
VERSION:3.0
END:VCARD

I just try to add my email into kaddressbook and i had the same problem, cause my name also contains as accent: Zé

Im going to send a test email to you and try adding it with the right click on my address and youll see what happens.
Comment 5 Thomas McGuire 2011-04-16 21:18:30 UTC
Git commit 115954932f961a1d9ef5f1c3a1230a750ecb4750 by Thomas McGuire.
Committed on 16/04/2011 at 21:24.
Pushed by tmcguire into branch 'master'.

Handle mailto URLs with non-ASCII names correctly.

The problem was the conversion from QUrl to QString, which made it
impossible to re-parse the URL later.
Avoid this conversion.

BUG: 270560

M  +1    -1    messageviewer/mailwebview.h     
M  +1    -1    messageviewer/mailwebview_webkit.cpp     
M  +8    -4    messageviewer/viewer_p.cpp     
M  +1    -1    messageviewer/viewer_p.h     

http://commits.kde.org/kdepim/115954932f961a1d9ef5f1c3a1230a750ecb4750
Comment 6 Thomas McGuire 2011-04-16 21:20:16 UTC
*** Bug 258334 has been marked as a duplicate of this bug. ***