Handle mailto URLs with non-ASCII names correctly.

The problem was the conversion from QUrl to QString, which made it
impossible to re-parse the URL later.
Avoid this conversion.

BUG: 270560